@@ -1,2 +1,2 @@
-VERSION=1.15.0
+VERSION=1.16.0
 YEARS=2005-2007
