@@ -14,8 +14,11 @@ namespace FBB
             A2x(std::string const &str);
             A2x(A2x const &other);
 
-            template <typename T>
-            operator T();
+            template <typename Type>
+            operator Type();
+
+            template <typename Type>
+            Type to();
 
             A2x &operator=(char const *txt);
     
@@ -41,12 +44,18 @@ inline A2x::A2x(A2x const &other)
     std::istringstream(other.str())
 {}
 
-template <typename T>
-inline A2x::operator T()
+template <typename Type>
+inline Type A2x::to()
 {
-    T t;
+    Type t;
 
-    return (*this >> t) ? t : T();
+    return (*this >> t) ? t : Type();
+}
+
+template <typename Type>
+inline A2x::operator Type()
+{
+    return to<Type>();
 }
 
 inline A2x &A2x::operator=(std::string const &str)
