@@ -1,3 +1,9 @@
+bobcat (1.16.0)
+
+  * Leftover `String' in string/unescape replaced by `std::string'.
+
+  * Added missing A2x.to<Type>() member template to A2x (cf. C++ Annotations).
+    
 bobcat (1.15.0)
 
   * The Glob constructor no longer requires a static_cast when multiple flags
@@ -10,7 +16,7 @@ bobcat (1.15.0)
     TableSupport.
 
   * The Milter class interface  was adapted to libmilter-dev 8.14.1-2, 
-    affecting milter/milter and milter/initialize.cc
+    affecting milter/milter and milter/initialize.cc.
 
 bobcat (1.14.2)
 
